@@ -1,3 +1,7 @@
+2011-09-26  Andreas Schwab  <schwab@redhat.com>
+
+	* sysdeps/x86_64/fpu/bits/mathinline.h: Use __asm instead of asm.
+
 2011-09-21  Chung-Lin Tang  <cltang@codesourcery.com>
 	    Maxim Kuvyrkov  <maxim@codesourcery.com>
 	    Joseph Myers  <joseph@codesourcery.com>
